# thumbnail-service

./: .gitignore  Dockerfile  OVERVIEW.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: routes.py
app/core/: config.py  errors.py
app/models/: schemas.py
app/services/: thumbnail_service.py
app/storage/: base.py  local.py
app/utils/: image_ops.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
tests/: test_api.py  test_image_ops.py
