[project]
name = "thumbnail-service"
version = "0.1.0"
description = "REST API for image thumbnail generation"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
